tests/ui/error-codes/E0432.stderr
error[E0432]: unresolved import `something`
  --> $DIR/E0432.rs:1:5
   |
LL | use something::Foo;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `something`
   |
help: you might be missing a crate named `something`, add it to your project and import it in your code
   |
LL + extern crate something;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
