tests/ui/error-codes/E0432.rs
//@ edition:2015
use something::Foo; //~ ERROR E0432

fn main () {
}
